all exercises done

--- a/hw1/01-hello.html
+++ b/hw1/01-hello.html
@@ -12,6 +12,12 @@
     <main>
       <h1>Intro Slide</h1>
       <!-- Add your code here -->
+      <img src= "http://placekitten.com/200/200" alt="kitten" width="200" height="200" />
+      <p>Hi! My name is Jaya Bhargavi Vengala.</br>
+        I am a Computer Science graduate student at Portland State University.</br>
+        My hobbies are cooking, cleaning, watching movies and listening songs. 
+        I enjoy hanging out with my friends.
+        </p>
     </main>
   </body>
 </html>
