--- a/hw1/05-form.html
+++ b/hw1/05-form.html
@@ -11,8 +11,25 @@
   <body>
     <main>
       <form action="">
-        <h1>Contact Form</h1>
+        <h1>Registration Form</h1>
         <!-- Add your code here -->
+        <label for="uname">Username:</label>
+        <input type="text" id="uname" name="uname"><br><br/>
+        <label for="ename">Email:</label>
+        <input type="text" id="ename" name="ename"><br><br/>
+        <label for="pname">Password:</label>
+        <input type="text" id="pname" name="pname"><br><br/>
+        <fieldset>
+          <legend>Would you like to sign up for newsletter?</legend>
+          <input type="radio" id="yes" name="yes">
+          <label for="yes">Yes, Sign me up</label>
+          <input type="radio" id="no" name="no">
+          <label for="no">No, thank you</label>
+        </fieldset><br/>
+        <label for="date">Date:</label>
+        <input type="date" id="date" name="date"><br><br/>
+        <input type="submit" name="submit" value="Submit" class="sub" id="submit"/>
+        <input type="reset" name="reset" value="Reset" class="reset" id="reset"/>
       </form>
     </main>
   </body>
