--- a/hw1/02-card.html
+++ b/hw1/02-card.html
@@ -12,6 +12,12 @@
     <main>
       <h1>Title of Card</h1>
       <!-- Add your code here -->
+      <img src= "http://placekitten.com/200/200" alt="kitten" width="200" height="200"/>
+      <p>Hunt anything that moves brown cats with pink ears yet kitty pounce, trip, faceplant you didn't see that no you didn't definitely didn't lick, lick, lick, and preen away the embarrassment. 
+        At four in the morning wake up owner meeeeeeooww scratch at legs and beg for food then cry and yowl until they wake up at two pm jump on window.
+        Paw your face to wake you up in the morning.
+      </p>
+      <button class="btn">Upvote</button>
     </main>
   </body>
 </html>
