--- a/hw1/03-navbar.html
+++ b/hw1/03-navbar.html
@@ -11,6 +11,13 @@
   <body>
     <nav>
       <!-- Add your code here -->
+      <ul>
+        <li><a href="home">Home</a></li> 
+        <li><a href="about">About</a></li> 
+        <li><a href="description">Description</a></li> 
+        <li><a href="projects">Projects</a></li> 
+        <li><a href="contacts">Contact</a></li> 
+      </ul>      
     </nav>
   </body>
 </html>
