--- a/hw1/04-table.html
+++ b/hw1/04-table.html
@@ -10,9 +10,36 @@
   </head>
   <body>
     <main>
-      <h1>Table</h1>
-      <table>
+      <h1>TV Listings</h1>
+      <table border="1">
         <!-- Add your code here -->
+        <tr>
+          <th>Time / Channels</th>
+          <th>8:00 PM</th>
+          <th>9:00 PM</th>
+          <th>10:00 PM</th>
+        </tr>
+        <tr>
+          <th>ABC</th>
+          <td>The Goldbergs</td>
+          <td>Home Economics</td>
+          <td>black-ish</td>
+        </tr>
+        <tr>
+          <th>CBS</th>
+          <td>Young Sheldon</td>
+          <td>United States of AI</td>
+          <td>Mom</td>
+        </tr>
+        <tr>
+          <th>NBC</th>
+          <td colspan="3">Stanley Cup Playoffs</td>
+        </tr>
+        <tr>
+          <th>Fox</th>
+          <td>Beat Shazam</td>
+          <td colspan="2">Local Programming</td>
+        </tr>
       </table>
     </main>
   </body>
