--- a/hw1/01-hello.html
+++ b/hw1/01-hello.html
@@ -5,19 +5,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>01 - Hello</title>
-    <!-- <link rel="stylesheet" href="../styles.css" />
-    <link rel="stylesheet" href="../hw2/01-hello.css" /> -->
+    <link rel="stylesheet" href="../styles.css" />
+    <link rel="stylesheet" href="../hw2/01-hello.css" />
   </head>
   <body>
     <main>
-      <h1>Intro Slide</h1>
       <!-- Add your code here -->
+      <div class="container">
       <img src= "http://placekitten.com/200/200" alt="kitten" width="200" height="200" />
-      <p>Hi! My name is Jaya Bhargavi Vengala.</br>
-        I am a Computer Science graduate student at Portland State University.</br>
-        My hobbies are cooking, cleaning, watching movies and listening songs. 
-        I enjoy hanging out with my friends.
-        </p>
+      <p>Hi! My name is Jaya Bhargavi Vengala. I am a Computer Science graduate student at Portland State University. My hobbies are cooking, cleaning, watching movies and listening songs. I enjoy hanging out with my friends.
+      </p>
+      </div>
     </main>
   </body>
 </html>
