--- a/hw3/05-bootstrap-grid.html
+++ b/hw3/05-bootstrap-grid.html
@@ -15,6 +15,26 @@
   <body>
     <main>
       <h1 class="my-4">05 - Bootstrap Grid</h1>
+      <div class="bootstrap-grid">
+        <div class="row row1">
+          <div class="col-md-6 col-lg-8"></div>
+          <div class="col-md-6 col-lg-4"></div>
+        </div>
+        <div class="row row2">
+          <div class="col-md-3 col-lg-10"></div>
+          <div class="col-md-9 col-lg-2"></div>
+        </div>
+        <div class="row row3">
+          <div class="col-4"></div>
+          <div class="col-4"></div>
+          <div class="col-4"></div>
+        </div>
+        <div class="row row4">
+          <div class="col-lg-2"></div>
+          <div class="col-lg-2"></div>
+          <div class="col-lg-8"></div>
+        </div>
+      </div>
     </main>
   </body>
 </html>
