fixing all feedback reviews

--- a/hw1/04-table.html
+++ b/hw1/04-table.html
@@ -14,12 +14,15 @@
       <div>
       <table border="1">
         <!-- Add your code here -->
+        <thead>
         <tr>
           <th class="table-heading">Time / Channels</th>
           <th class="table-heading">8:00 PM</th>
           <th class="table-heading">9:00 PM</th>
           <th class="table-heading">10:00 PM</th>
         </tr>
+      </thead>
+      <tbody>
           <tr>
           <th class="channel">ABC</th>
           <td>The Goldbergs</td>
@@ -41,6 +44,7 @@
           <td>Beat Shazam</td>
           <td colspan="2">Local Programming</td>
         </tr>
+      </tbody>
       </table>
     </div>
     </main>
