--- a/hw1/05-form.html
+++ b/hw1/05-form.html
@@ -20,12 +20,13 @@
         <input type="email" id="ename" name="ename"><br><br/>
         <label for="pname"><b>Password: &nbsp;</b></label>
         <input type="password" id="pname" name="pname"><br><br/>
+        <fieldset>
           <legend><b>Would you like to sign up for the newsletter?</b></legend>
           <input type="radio" id="yes" name="yes">
-          <label for="yes">Yes, Sign me up</label></br>
+          <label for="yes">Yes, Sign me up</label><br>
           <input type="radio" id="no" name="no">
           <label for="no">No, thank you</label>
-          <br><br/>
+        </fieldset><br>
         <label for="date"><b>Date:&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</b></label>
         <input type="text" placeholder="mm / dd / yyyy" id="date" name="date"><br><br/>
         <input type="submit" name="submit" value="Submit" class="sub" id="submit"/>
