--- a/hw3/06-bootstrap-form.html
+++ b/hw3/06-bootstrap-form.html
@@ -38,16 +38,24 @@
             <div class = "form-group row mx-2 mb-3 row">
               <span class = "px-2">Would you like to sign up for the newsletter?</span> 
             <div class="form-check col-12 px-4 mx-2">
+              <fieldset>
+                <legend>
               <input class="form-check-input" type="radio" name="flexRadioDefault" id="Radio1" checked>
               <label class="form-check-label" for="Radio1">
                 Yes, sign me up
               </label>
+            </legend>
+            </fieldset>
             </div>
             <div class="form-check col-12 px-4 mx-2">
+              <fieldset>
+                <legend>
               <input class="form-check-input" type="radio" name="flexRadioDefault" id="Radio2">
               <label class="form-check-label" for="Radio2">
                 No, thank you
               </label>
+            </legend>
+          </fieldset>
             </div>
           </div>
           <div class="form-group row mb-3 mx-auto">
